# kinematic_constraint

./: .pre-commit-config.yaml  LICENSE.md  README.md  math.md  pyproject.toml
.github/workflows/: actions.yml
kinematic_constraint/: __init__.py  dof.py  geometry.py  linalg.py  visualize.py
tests/: test_dof.py  test_geometry.py
